Fix search component label accessibility
- when the page is linearised (web developer toolbar, miscellaneous, linearise page) the absolutely positioned label for the search input (which is pretending to be placeholder text) appears before the search input and is unreadable on a blue background
- this fixes this by adding a white background to the label, so the appearance is unchanged in the normal view but readable when linearised

--- a/app/assets/stylesheets/govuk_publishing_components/components/_search.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_search.scss
@@ -9,6 +9,7 @@ $large-input-size: 50px;
 .gem-c-search__label {
   @include govuk-font($size: 19, $line-height: $input-size);
   display: block;
+  background: govuk-colour("white");
 
   h1 {
     @include govuk-font($size: 19, $line-height: $input-size);
@@ -17,8 +18,10 @@ $large-input-size: 50px;
 
   .js-enabled & {
     position: absolute;
-    left: govuk-spacing(3);
-    top: 1px;
+    left: 2px;
+    top: 2px;
+    bottom: 2px;
+    padding-left: govuk-spacing(3);
     z-index: 1;
     color: $govuk-secondary-text-colour;
   }
@@ -201,6 +204,8 @@ $large-input-size: 50px;
 .gem-c-search--separate-label {
   .gem-c-search__label {
     position: relative;
+    top: auto;
     left: auto;
+    padding-left: 0;
   }
 }
